--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,6 @@ path = "src/bin/main.rs"
 
 [dependencies]
 clap = { version = "4.0.27", features = ["derive"] }
+semver = { version = "1.0.14", features = ["serde"] }
+serde = { version = "1.0.147", features = ["derive"] }
+toml = "0.5.9"
