--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ path = "src/bin/main.rs"
 
 [dependencies]
 clap = { version = "4.0.27", features = ["derive"] }
+git2 = { version = "0.15.0" }
 semver = { version = "1.0.14", features = ["serde"] }
 serde = { version = "1.0.147", features = ["derive"] }
 toml = "0.5.9"
