--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,15 +8,8 @@ on:
 
 jobs:
   build:
-    name: Builds on ${{ matrix.os }}
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [
-          ubuntu-latest,
-          windows-latest,
-          macOS-latest
-        ]
+    name: Builds
+    runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v1
