--- a/.github/workflows/clippy.yml
+++ b/.github/workflows/clippy.yml
@@ -7,15 +7,8 @@ on:
 
 jobs:
   clippy:
-    name: Runs "cargo clippy" on ${{ matrix.os }}
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [
-          ubuntu-latest,
-          windows-latest,
-          macOS-latest
-        ]
+    name: Runs "cargo clippy"
+    runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v2
