--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,15 +7,8 @@ on:
 
 jobs:
   test:
-    name: Runs "cargo test" on ${{ matrix.os }}
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [
-          ubuntu-latest,
-          windows-latest,
-          macOS-latest
-        ]
+    name: Runs "cargo test"
+    runs-on: ubuntu-latest
 
     steps:
       - name: Checkout
