--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -38,6 +38,7 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           branch: release
           title: Release
+          base: main
 
       - name: Check Outputs
         if: ${{ steps.create_pull_request.outputs.pull-request-number }}
